# SpectrumEngine

./: CMakeLists.txt
Demo/: CMakeLists.txt
Demo/ConsoleDemo/: CMakeLists.txt  main.cpp
Demo/QtDemo/: CMakeLists.txt  ExampleWidget.cpp  ExampleWidget.h  main.cpp
Src/: AudioCapture.cpp  AudioCapture.h  RhythmProvider.cpp  RhythmProvider.h  SpectrumAnalyser.cpp  SpectrumAnalyser.h  SpectrumEngine.cpp  SpectrumEngine.h  SpectrumProvider.cpp  SpectrumProvider.h  Utils.cpp  Utils.h
